force-app/main/default/objects/Review__c/fields/Beer__c.field-meta.xml
<CustomField>
    <fullName>Beer__c</fullName>
    <label>Beer</label>
    <referenceTo>Beer__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>