force-app/main/default/objects/Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <inlineHelpText>Rating of beer 1 being the lowest and 5 being the highest, can do one digit to the right of decimal point. (Example: 4.8 or 3.1)</inlineHelpText>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>