force-app/main/default/objects/Review__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <inlineHelpText>What did you think of the beer?</inlineHelpText>
    <label>Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>