force-app/main/default/objects/Review__c/validationRules/Rating_between_one_five.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_between_one_five</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Rating__c &lt; 1, Rating__c &gt; 5.00)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating must be between 1 and 5</errorMessage>
</ValidationRule>